--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,12 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  email: "test_1@gmail.com"
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+  admin: "true"
+
+two:
+  email: "test_2@gmail.com"
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+  admin: "false"
