--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,9 +7,9 @@
 one:
   email: "test_1@gmail.com"
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
-  admin: "true"
+  admin: true
 
 two:
   email: "test_2@gmail.com"
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
-  admin: "false"
+  admin: false
