--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,11 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# Ignore local development environment variables
+/.env
+
+/client_secret.json
+
 /public/uploads
 /public/packs
 /public/packs-test
@@ -30,3 +35,5 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+/test/.DS_Store
